--- a/test_for_gui.ipynb
+++ b/test_for_gui.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,17 +21,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df_descripteur = pd.read_csv('freq_poids_porter.csv')"
+    "## Files load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_descripteur_porter = pd.read_csv('freq_poids_porter.csv')\n",
+    "df_descripteur_lancaster = pd.read_csv('freq_poids_lancaster.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_freqs_poids_porter = pd.read_csv('freq_poids_porter.csv')\n",
+    "df_freqs_poids_lancaster = pd.read_csv('freq_poids_lancaster.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +58,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_document_descripteur(document):\n",
-    "        new_df = df_descripteur[df_descripteur['Document']== document]\n",
+    "X_train = pd.read_csv('X_train.csv')\n",
+    "y_train = pd.read_csv('y_train.csv')\n",
+    "X_test = pd.read_csv('X_test.csv')\n",
+    "y_test = pd.read_csv('y_test.csv')\n",
+    "\n",
+    "df_pca_dbscan = pd.read_csv('df_pca_dbscan.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "queries_porter = pd.read_csv('queries_porter.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## First tab functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_document_descripteur(document, stemming_method):\n",
+    "        if stemming_method == 'Porter':\n",
+    "                new_df = df_descripteur_porter[df_descripteur_porter['Document']== document]\n",
+    "        elif stemming_method == 'Lancaster':\n",
+    "                new_df = df_descripteur_lancaster[df_descripteur_lancaster['Document']== document]\n",
     "        new_df.drop(['Document'], axis=1, inplace=True)\n",
     "        \n",
     "        inverse = df_inverse.iloc[int(document)].to_frame()\n",
@@ -54,31 +119,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def search_document_inverse(phrase):\n",
+    "def search_document_inverse(phrase, stemming_method):\n",
     "        ExpReg = nltk. RegexpTokenizer('(?:[A-Za-z]\\.)+|\\d+(?:\\.\\d+)?%?|\\w+(?:\\-\\w+)*')\n",
     "        termes = ExpReg.tokenize(phrase)\n",
     "        termes = [t.lower() for t in termes]\n",
     "        MotsVides = nltk.corpus.stopwords.words('english')\n",
-    "        Porter = nltk.PorterStemmer()\n",
-    "        TermesSansMotsVides_p = [Porter.stem(terme) for terme in termes if terme.lower() not in MotsVides]\n",
+    "        if stemming_method == 'Porter':\n",
+    "                Porter = nltk.PorterStemmer()\n",
+    "                TermesSansMotsVides_p = [Porter.stem(terme) for terme in termes if terme.lower() not in MotsVides]\n",
+    "        elif stemming_method == 'Lancaster':\n",
+    "                Lancaster = nltk.LancasterStemmer()\n",
+    "                TermesSansMotsVides_p = [Lancaster.stem(terme) for terme in termes if terme.lower() not in MotsVides]\n",
     "        \n",
     "        new_df = df_inverse[TermesSansMotsVides_p]\n",
     "        new_df = new_df[(new_df.T != 0.000000).any()]\n",
     "        new_df = new_df.reset_index(level=0)\n",
     "\n",
-    "        desc_df = df_descripteur.loc[df_descripteur['Terme'].isin(TermesSansMotsVides_p) ]\n",
+    "        if stemming_method == 'Porter':\n",
+    "                desc_df = df_descripteur_porter.loc[df_descripteur_porter['Terme'].isin(TermesSansMotsVides_p) ]\n",
+    "        elif stemming_method == 'Lancaster':\n",
+    "                desc_df = df_descripteur_lancaster.loc[df_descripteur_lancaster['Terme'].isin(TermesSansMotsVides_p) ]\n",
     "\n",
     "        #new_df.drop(['document'], axis=1, inplace=True)\n",
     "        return new_df, desc_df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Second tab function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,15 +177,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Third tab functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7862\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -114,7 +207,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -127,7 +220,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +238,10 @@
     "                        with gr.Column():\n",
     "                                gr.Markdown(\"Search by Document\")\n",
     "                                search_document = gr.Number()\n",
-    "                                search_document_button = gr.Button(label=\"Search by Document\")\n",
+    "                        with gr.Column():\n",
+    "                                gr.Markdown(\"Stemming method\")\n",
+    "                                stemming_method = gr.Radio([\"Porter\", \"Lancaster\"], label=\"Stemming\")\n",
+    "                        search_document_button = gr.Button(label=\"Search by Document\")\n",
     "                with gr.Row():\n",
     "                        with gr.Column():\n",
     "                                gr.Markdown(\"Descripteur\")\n",
@@ -162,8 +258,8 @@
     "                gr.Markdown(\"DBScan\")\n",
     "        with gr.Tab(\"Naive Bayes\"):\n",
     "                gr.Markdown(\"Naive Bayes\")\n",
-    "        search_button.click(search_document_inverse, inputs = search_input, outputs = [search_output_inverse, search_output_descripteur])\n",
-    "        search_document_button.click(search_document_descripteur, inputs = search_document, outputs = [search_output_descripteur, search_output_inverse])\n",
+    "        search_button.click(search_document_inverse, inputs = [search_input, stemming_method], outputs = [search_output_inverse, search_output_descripteur])\n",
+    "        search_document_button.click(search_document_descripteur, inputs = [search_document, stemming_method], outputs = [search_output_descripteur, search_output_inverse])\n",
     "        search_boolean_button.click(search_query, inputs = search_boolean, outputs = search_boolean_output)\n",
     "\n",
     "app.launch()"
