--- a/testing_slice.ipynb
+++ b/testing_slice.ipynb
@@ -2,10 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "#import preprocessing from sklearn\n",
+    "from sklearn import preprocessing\n",
+    "#import pca from sklearn\n",
+    "from sklearn.decomposition import PCA\n",
+    "import machine_learning \n",
+    "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '5: slsfjkgkfjgh'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ml = machine_learning.MachineLearning()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_freqs_poids_porter= pd.read_csv('freq_poids_porter.csv')\n",
+    "df_freqs_poids_lan= pd.read_csv('freq_poids_lancaster.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\YsPC\\Documents\\GitHub\\RI\\Projet-RI\\machine_learning.py:314: RuntimeWarning: divide by zero encountered in log\n",
+      "  conditional = np.sum(np.log(self.gaussian_density(i, x))) # use the log to make it more numerically stable\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-e5638447c059>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mpca_df_normalized_queries\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbayes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpca_df_normalized_queries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mpca_df_dbscan\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'pca_df_dbscan.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Unnamed: 0'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mdocs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpca_df_dbscan\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpca_df_dbscan\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mpca_df_normalized_queries\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[0mdocs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Document'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdocs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0mdocs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Distance'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = pd.read_csv('X_train.csv')\n",
+    "y_train = pd.read_csv('y_train.csv')\n",
+    "X_test = pd.read_csv('X_test.csv')\n",
+    "y_test = pd.read_csv('y_test.csv')\n",
+    "bayes= ml.NaiveBayesClassifier()\n",
+    "bayes.fit(X_train.squeeze(), y_train.squeeze())\n",
+    "queries_porter = pd.read_csv('queries_porter.csv')\n",
+    "pca = PCA(n_components=2)\n",
+    "pca.fit(queries_porter)\n",
+    "x_pca = pca.transform(queries_porter)\n",
+    "pca_df = pd.DataFrame(x_pca)\n",
+    "pca_df\n",
+    "x = pca_df.values #returns a numpy array\n",
+    "min_max_scaler = preprocessing.MinMaxScaler()\n",
+    "x_scaled = min_max_scaler.fit_transform(x)\n",
+    "pca_df_normalized_queries = pd.DataFrame(x_scaled)\n",
+    "pca_df_normalized_queries['label']=bayes.predict(pca_df_normalized_queries)\n",
+    "pca_df_dbscan = pd.read_csv('pca_df_dbscan.csv').drop(columns=['Unnamed: 0'])\n",
+    "docs = pca_df_dbscan[pca_df_dbscan['label'] == pca_df_normalized_queries.loc[query-1]['label']]\n",
+    "docs['Document']=docs.index+1\n",
+    "docs['Distance']=np.nan\n",
+    "cols = ['doc','distance']\n",
+    "for doc in docs.index+1:\n",
+    "        docs['Distance'].loc[doc-1] = ml._distance(pca_df_normalized_queries.loc[query-1,0:1],docs.loc[doc-1][0:2].values)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +103,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.7.0"
   },
   "orig_nbformat": 4,
